--- a/Schematization/Schematization/Schematization.csproj
+++ b/Schematization/Schematization/Schematization.csproj
@@ -48,6 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\DataLayer.cs" />
+    <Compile Include="Form\CreateTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\CreateTask.Designer.cs">
+      <DependentUpon>CreateTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Core\Task.cs" />
     <Compile Include="Form\Schematization.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +64,9 @@
     </Compile>
     <Compile Include="Core\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form\CreateTask.resx">
+      <DependentUpon>CreateTask.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\Schematization.resx">
       <DependentUpon>Schematization.cs</DependentUpon>
     </EmbeddedResource>
